5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1646_869.log
== TEST (2019-04-23 15:54:34) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)

print(valorT)
print(valorT - valorD)




-- OUTPUT:
500
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:54:36) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)

print(valorT)
print(valorT - valorD)




-- EXECUTION TIME:
0.214813
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
500
475
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
500
475
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:54:42) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)

print(valorT)
print(valorT - valorD)




-- OUTPUT:
500
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:55:15) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)

print(round(valorT - valorD.2))




-- ERROR:
File "XXXX", line 5
    print(round(valorT - valorD.2))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:55:17) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)

print(round(valorT - valorD.2))




-- EXECUTION TIME:
0.147085
-- ERROR:
  File "/home/codebench/codes/1646/869/main.py", line 5
    print(round(valorT - valorD.2))
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:57:00) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 2))




-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:57:02) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 2))




-- EXECUTION TIME:
0.114989
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:57:10) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:57:11) 
-- CODE:
# Desconto
valorT = 500
valorD = int((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.108813
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:57:22) 
-- CODE:
# Desconto
valorT = 500
valorD = float((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:57:23) 
-- CODE:
# Desconto
valorT = 500
valorD = float((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.139268
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:57:32) 
-- CODE:
# Desconto
valorT = 500
valorD = float((valorT *5)//100)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:57:33) 
-- CODE:
# Desconto
valorT = 500
valorD = float((valorT *5)//100)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.170268
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:57:45) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)//100)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:57:47) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)//100)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.161324
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:57:56) 
-- CODE:
# Desconto
valorT = 500
valorD = float((valorT *5)//100)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:58:02) 
-- CODE:
# Desconto
valorT = 500
valorD = float((valorT *5)//100)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.203106
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:59:19) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:59:22) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)/100)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.164445
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:59:54) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)/100.0)
valorP = valorT - valorD

print(round(valorP, 1))




-- OUTPUT:
475.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:59:56) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)/100.0)
valorP = valorT - valorD

print(round(valorP, 1))




-- EXECUTION TIME:
0.137996
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:00:10) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)/100)
valorP = (valorT - valorD)

print(round(valorP, 1))




-- OUTPUT:
475.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:00:11) 
-- CODE:
# Desconto
valorT = 500
valorD = ((valorT *5)/100)
valorP = (valorT - valorD)

print(round(valorP, 1))




-- EXECUTION TIME:
0.21588
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
